--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html encoding="utf-8">
 <head>
   <title>PHQ-9 Depression Screen | Quartet Health</title>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://fb.me/react-0.14.3.js"></script>
   <script src="https://fb.me/react-dom-0.14.3.js"></script>
@@ -10,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+  <h1>Patient Health Questionnaire (PHQ-9)</h1>
   <div class="messaging">
   </div>
   <div class="page_content">
